--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="clock.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="clock.ico">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
